Handles delete errors
