# openapi.yaml
@@ -184,6 +184,26 @@ paths:
                 Delete successful:
                   value:
                     message: Product [cheese] was succesfully deleted.
+        "400":
+          description: Invalid ID
+          content:
+            application/json; charset=utf-8:
+              schema:
+                type: string
+              examples:
+                Error message:
+                  value:
+                    message: 'ID [123] has an invalid format.'
+        "404":
+          description: Not found
+          content:
+            application/json; charset=utf-8:
+              schema:
+                type: string
+              examples:
+                Error message:
+                  value:
+                    message: 'Product with id [123] does not exist.'
 components:
   schemas:
     product:
